--- a/emsg-sdk-java/pom.xml
+++ b/emsg-sdk-java/pom.xml
@@ -24,7 +24,7 @@
 				<dependency>
 				  <groupId>junit</groupId>
 				  <artifactId>junit</artifactId>
-				  <version>4.11-20120805-1225</version>
+				  <version>4.10</version>
 				</dependency>
 		</dependencies>
 
