--- a/emsg-sdk-java/pom.xml
+++ b/emsg-sdk-java/pom.xml
@@ -13,13 +13,11 @@
 				<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		</properties>
 
-
 		<dependencies>
 				<dependency>
-						<groupId>net.sf.json-lib</groupId>
-						<artifactId>json-lib</artifactId>
-						<version>2.2</version>
-						<classifier>jdk15</classifier>
+					<groupId>com.google.code.gson</groupId>
+					<artifactId>gson</artifactId>
+					<version>2.2.4</version>
 				</dependency>
 				<dependency>
 				  <groupId>junit</groupId>
@@ -42,6 +40,22 @@
 										</execution>
 								</executions>
 						</plugin>
+
+						<plugin>  
+			                <artifactId>maven-assembly-plugin</artifactId>  
+			                <configuration>  
+			                    <archive>  
+			                        <manifest>  
+			                            <mainClass>com.allen.capturewebdata.Main</mainClass>  
+			                        </manifest>  
+			                    </archive>  
+			                    <descriptorRefs>  
+			                        <descriptorRef>jar-with-dependencies</descriptorRef>  
+			                    </descriptorRefs>  
+			                </configuration>  
+			            </plugin>  
+			            						
+						
 						<plugin>
 								<artifactId>maven-compiler-plugin</artifactId>
 								<version>2.3.2</version>
