--- a/emsg-sdk-java/pom.xml
+++ b/emsg-sdk-java/pom.xml
@@ -1,90 +1,108 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-		<modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-		<groupId>com.emsg.client</groupId>
-		<artifactId>emsg-sdk-java</artifactId>
-		<version>1.0-SNAPSHOT</version>
-		<packaging>jar</packaging>
-		<name>emsg-sdk-java</name>
-		<url>http://maven.apache.org</url>
+	<groupId>com.emsg.client</groupId>
+	<artifactId>emsg-sdk-java</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<name>emsg-sdk-java</name>
+	<url>http://maven.apache.org</url>
 
-		<properties>
-				<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		</properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
-		<dependencies>
-				<dependency>
-					<groupId>com.google.code.gson</groupId>
-					<artifactId>gson</artifactId>
-					<version>2.2.4</version>
-				</dependency>
-				<dependency>
-				  <groupId>junit</groupId>
-				  <artifactId>junit</artifactId>
-				  <version>4.10</version>
-				</dependency>
-		</dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+		</dependency>
+	</dependencies>
 
-		<build>
-				<plugins>
-						<plugin>
-								<groupId>org.apache.maven.plugins</groupId>
-								<artifactId>maven-source-plugin</artifactId>
-								<executions>
-										<execution>
-												<id>attach-sources</id>
-												<goals>
-														<goal>jar</goal>
-												</goals>
-										</execution>
-								</executions>
-						</plugin>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 
-						<plugin>  
-			                <artifactId>maven-assembly-plugin</artifactId>  
-			                <configuration>  
-			                    <archive>  
-			                        <manifest>  
-			                            <mainClass>com.allen.capturewebdata.Main</mainClass>  
-			                        </manifest>  
-			                    </archive>  
-			                    <descriptorRefs>  
-			                        <descriptorRef>jar-with-dependencies</descriptorRef>  
-			                    </descriptorRefs>  
-			                </configuration>  
-			            </plugin>  
-			            						
-						
-						<plugin>
-								<artifactId>maven-compiler-plugin</artifactId>
-								<version>2.3.2</version>
-								<configuration>
-										<source>1.7</source>
-										<target>1.7</target>
-										<encoding>UTF-8</encoding>
-								</configuration>
-						</plugin>
-				</plugins>
-		</build>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.allen.capturewebdata.Main</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin>
 
-		<distributionManagement>
-				<repository>
-						<id>Releases</id>
-						<name>Releases</name>
-						<url>
+
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy</id>
+						<phase>install</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>target/lib</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+		</plugins>
+	</build>
+
+	<distributionManagement>
+		<repository>
+			<id>Releases</id>
+			<name>Releases</name>
+			<url>
 								http://210.51.174.131:8081/nexus/content/repositories/releases/
 						</url>
-				</repository>
-				<snapshotRepository>
-						<id>Snapshots</id>
-						<name>Snapshots</name>
-						<url>
+		</repository>
+		<snapshotRepository>
+			<id>Snapshots</id>
+			<name>Snapshots</name>
+			<url>
 								http://210.51.174.131:8081/nexus/content/repositories/snapshots/
 						</url>
-				</snapshotRepository>
+		</snapshotRepository>
 
-		</distributionManagement>
+	</distributionManagement>
 
 
 </project>
